--- a/src/templates/_settings.twig
+++ b/src/templates/_settings.twig
@@ -5,13 +5,42 @@
 
 <h1>Settings</h1>
 
+<p>First you need to create a Facebook App. You can do this by visiting the <a href="https://developers.facebook.com/apps/">Facebook Developers</a> page.</p>
+
+<p>You can find your <strong>App ID</strong> and <strong>App Secret</strong> on Facebook Developers -> App Settings -> Basic page. Then fill them in below.</p>
+
 {{ forms.textField({ 
   label: 'Facebook App ID',
   id: 'appId',
   name: 'appId',
-  instructions: 'First you need to create a Facebook App. You can do this by visiting the <a href="https://developers.facebook.com/apps/">Facebook Developers</a> page.',
   required: true,
   value: settings.appId
 }) }}
 
-{{ forms.submitButton({}) }}
+{{ forms.passwordField({ 
+  label: 'Facebook App Secret',
+  id: 'appSecret',
+  name: 'appSecret',
+  required: true,
+  value: settings.appSecret
+}) }}
+
+{{ forms.submitButton({ label: 'Save' }) }}
+
+<p>Before the next step, add the following to the <strong>Valid OAuth Redirect URIs</strong> field on the Facebook Developers -> App Settings -> Products -> Instagram Basic Display -> Basic Display:</p>
+
+<pre>{{ plugin.getRedirectUrl() }}</pre>
+
+{% if settings.appId and settings.appSecret %}
+  <hr>
+
+  <h1>Authenticate (OAuth)</h1>
+
+  {% if settings.accessToken %}
+    <p style="background:green;display:inline;padding:8px;color:white;border-radius:5px;"><strong>You are successfully authenticated with Facebook!</strong></p>
+  {% else %}
+    <p>After saving your Facebook App ID and Secret, you need to authenticate with Facebook to get an access token. Click the button below to authenticate.</p>
+
+    <a href="{{ plugin.getAuthUrl() }}" class="btn">Authenticate with Facebook</a>
+  {% endif %}
+{% endif %}
