--- a/src/templates/_settings.twig
+++ b/src/templates/_settings.twig
@@ -74,6 +74,14 @@
 
       <a href="https://www.instagram.com/{{ instagramProfile.username }}" class="btn">View Instagram Profile</a>
 
+      <hr>
+
+      <h2>Access token</h4>
+
+      <p>Expires: <strong>{{ settings.accessTokenExpires|date('Y-m-d H:i:s') }}</strong></p>
+
+      <a href="/actions/instagram-api/admin/refresh-access-token" class="btn">Refresh Access Token</a>
+
       <a href="/actions/instagram-api/admin/clear-access-token" class="btn submit">Clear Access Token</a>
 
       <hr>
