--- a/src/templates/_settings.twig
+++ b/src/templates/_settings.twig
@@ -80,6 +80,12 @@
 
       <p>Expires: <strong>{{ settings.accessTokenExpires|date('Y-m-d H:i:s') }}</strong></p>
 
+      <p>It is recommended to setup a cron job to automatically refresh the access token every 30 days. You can do this by setting up your crontab with the following command:</p>
+
+      <pre style="background:#eee;padding:16px;color:black;line-height:28px;">{{ '0 0 1 * * /path/to/php /path/to/craft instagram-api/refresh-token' }}</pre>
+
+      <br>
+
       <a href="/actions/instagram-api/admin/refresh-access-token" class="btn">Refresh Access Token</a>
 
       <a href="/actions/instagram-api/admin/clear-access-token" class="btn submit">Clear Access Token</a>
