Update Facebook Developers URL

--- a/src/templates/_settings.twig
+++ b/src/templates/_settings.twig
@@ -9,7 +9,7 @@
 
 <h2>Step 1</h2>
 
-<p>First you need to create an Instagram App. You can do this by visiting the <a href="https://developers.facebook.com/apps/">Facebook Developers</a> page. When creating the app select use case 'Other', then 'Comsumer'. and then you will be able to Set Up the <strong>Instagram Basic Display</strong>.</p>
+<p>First you need to create an Instagram App. You can do this by visiting the <a href="https://developers.facebook.com">Facebook Developers</a> page. When creating the app select use case 'Other', then 'Comsumer'. and then you will be able to Set Up the <strong>Instagram Basic Display</strong>.</p>
 
 <p>Add your instagram account to <span style="background:#eee;padding:8px;border-radius:5px;">App Roles -> Roles</span> on your Instagram App settings.</p>
 
