--- a/src/templates/_settings.twig
+++ b/src/templates/_settings.twig
@@ -78,6 +78,24 @@
 
       <hr>
 
+      {% set instagramMedia = craft.instagram.getMedia() %}
+
+      {% if instagramMedia|length %}
+          <div>
+              <h2>Latest Media Preview</h2>
+
+              {% for media in instagramMedia %}
+                  <div style="display:inline-block;margin:8px;max-width:100px;">
+                      <a href="{{ media.permalink }}" title="View on Instagram" target="_blank">
+                          <img src="{{ media.media_url }}" alt="{{ media.caption ?? 'Instagram image' }}"/>
+                      </a>
+                  </div>
+              {% endfor %}
+          </div>
+      {% endif %}
+
+      <hr>
+
       <h2>Access token</h4>
 
       <p>Expires: <strong>{{ settings.accessTokenExpires|date('Y-m-d H:i:s') }}</strong></p>
