Add media.caption fallback in settings instructions

--- a/src/templates/_settings.twig
+++ b/src/templates/_settings.twig
@@ -193,7 +193,7 @@
         {% for media in instagramMedia %}
             <div>
                 <a href="{{ media.permalink }}" title="View on Instagram" target="_blank">
-                    <img src="{{ media.media_url }}" alt="{{ media.caption }}" />
+                    <img src="{{ media.media_url }}" alt="{{ media.caption ?? \'Instagram image\' }}"/>
                 </a>
             </div>
         {% endfor %}
