--- a/src/templates/_settings.twig
+++ b/src/templates/_settings.twig
@@ -3,75 +3,81 @@
 
 {% import '_includes/forms.twig' as forms %}
 
-<h1>Setup</h1>
+{% if not settings.accessToken %}
+  <h1>Setup</h1>
 
-<hr>
-
-<h2>Step 1</h2>
-
-<p>First you need to create an Instagram App. You can do this by visiting the <a href="https://developers.facebook.com">Facebook Developers</a> page. When creating the app select use case 'Other', then 'Business'. and then you will be able to Set Up the <strong>Instagram API</strong>.</p>
-
-<p>Add your instagram account to <span style="background:#eee;padding:8px;border-radius:5px;">App Roles -> Roles</span> on your Instagram App settings.</p>
-
-<p><strong>Note:</strong> You can find your <strong>App ID</strong>, <strong>App Secret</strong> and <strong>Valid OAuth Redirect URIs</strong> at: <span style="background:#eee;padding:8px;border-radius:5px;">Facebook Developers -> App Settings -> Products -> Instagram Basic Display -> Basic Display</span></p>
-
-<hr>
-
-<h2>Step 2</h2>
-
-<p>Add the following to the <strong>Valid OAuth Redirect URIs</strong> field on your Instagram App settings.</p>
-
-<p><strong>Note:</strong> If you are in a development environment, remember to additionally add your live domain to the <strong>Valid OAuth Redirect URIs</strong> field.</p>
-
-{{ forms.copytextField({ 
-  label: 'Copy Valid OAuth Redirect URI',
-  value: plugin.getRedirectUrl(),
-}) }}
-
-<hr>
-
-<h2>Step 3</h2>
-
-<p>Fill in the following fields with your <strong>Instagram App ID</strong> and <strong>Instagram App Secret</strong>.</p>
-
-{{ forms.textField({ 
-  label: 'Instagram App ID',
-  id: 'appId',
-  name: 'appId',
-  required: true,
-  value: settings.appId
-}) }}
-
-{{ forms.passwordField({ 
-  label: 'Instagram App Secret',
-  id: 'appSecret',
-  name: 'appSecret',
-  required: true,
-  value: settings.appSecret
-}) }}
-
-{{ forms.submitButton({ label: 'Save' }) }}
-
-{% if settings.appId and settings.appSecret %}
   <hr>
 
-  <h2>Step 4</h2>
+  <h2>Step 1</h2>
 
+  <p>First you need to create an Instagram App. You can do this by visiting the <a href="https://developers.facebook.com">Facebook Developers</a> page. When creating the app select use case 'Other', then 'Business'. and then you will be able to Set Up the <strong>Instagram API</strong>.</p>
+
+  <p>Add your instagram account to <span style="background:#eee;padding:8px;border-radius:5px;">App Roles -> Roles</span> on your Instagram App settings.</p>
+
+  <p><strong>Note:</strong> You can find your <strong>App ID</strong>, <strong>App Secret</strong> and <strong>Valid OAuth Redirect URIs</strong> at: <span style="background:#eee;padding:8px;border-radius:5px;">Facebook Developers -> App Settings -> Products -> Instagram Basic Display -> Basic Display</span></p>
+
+  <hr>
+
+  <h2>Step 2</h2>
+
+  <p>Add the following to the <strong>Valid OAuth Redirect URIs</strong> field on your Instagram App settings.</p>
+
+  <p><strong>Note:</strong> If you are in a development environment, remember to additionally add your live domain to the <strong>Valid OAuth Redirect URIs</strong> field.</p>
+
+  {{ forms.copytextField({ 
+    label: 'Copy Valid OAuth Redirect URI',
+    value: plugin.getRedirectUrl(),
+  }) }}
+
+  <hr>
+
+  <h2>Step 3</h2>
+
+  <p>Fill in the following fields with your <strong>Instagram App ID</strong> and <strong>Instagram App Secret</strong>.</p>
+
+  {{ forms.textField({ 
+    label: 'Instagram App ID',
+    id: 'appId',
+    name: 'appId',
+    required: true,
+    value: settings.appId
+  }) }}
+
+  {{ forms.passwordField({ 
+    label: 'Instagram App Secret',
+    id: 'appSecret',
+    name: 'appSecret',
+    required: true,
+    value: settings.appSecret
+  }) }}
+
+  {{ forms.submitButton({ label: 'Save' }) }}
+{% endif %}
+
+{% if settings.appId and settings.appSecret %}
   {% if settings.accessToken %}
-    <p style="background:#16A34A;display:inline-block;padding:8px;color:white;border-radius:5px;font-size:16px;margin:0;"><strong>Completed: You are successfully authenticated with Instagram!</strong></p>
+    <p style="background:#16A34A;display:inline-block;padding:12px 24px 12px 24px;color:white;border-radius:5px;font-size:16px;margin:0;">You are successfully authenticated with Instagram!</p>
   
     {% set instagramProfile = craft.instagram.getProfile(false) %}
 
     {% if instagramProfile %}
       <hr>
 
-      <h2>Connected Instagram Profile</h4>
+      <h2>Profile</h4>
+
+      {% if instagramProfile.profile_picture_url %}
+        <img src="{{ instagramProfile.profile_picture_url }}" alt="{{ instagramProfile.username }}'s Instagram Profile Picture" style="border-radius:50%;width:150px;height:150px;">
+      {% endif %}
 
       <p>
-        ID: <strong>{{ instagramProfile.id }}</strong><br>
-        Username: <strong>{{ instagramProfile.username }}</strong><br>
-        Account Type: <strong>{{ instagramProfile.account_type }}</strong><br>
-        Media Count: <strong>{{ instagramProfile.media_count }}</strong><br>
+        <strong>ID:</strong> {{ instagramProfile.id }}<br>
+        <strong>Username:</strong> {{ instagramProfile.username }}<br>
+        <strong>Account Type:</strong> {{ instagramProfile.account_type }}<br>
+        <strong>Media Count:</strong> {{ instagramProfile.media_count }}<br>
+        <strong>Followers:</strong> {{ instagramProfile.followers_count }}<br>
+        <strong>Follows:</strong> {{ instagramProfile.follows_count }}<br>
+        <strong>Biography:</strong><br>
+        {{ instagramProfile.biography }}
       </p>
 
       <a href="https://www.instagram.com/{{ instagramProfile.username }}" class="btn">View Instagram Profile</a>
@@ -136,6 +142,10 @@
       <a href="/actions/instagram-api/admin/clear-cache" class="btn submit">Clear Cache</a>
     {% endif %}
   {% else %}
+    <hr>
+
+    <h2>Step 4</h2>
+
     <p>After saving your Instagram App ID and Secret, you need to authenticate with Instagram to get an access token. Click the button below to start the authorization flow with Instagram.</p>
 
     <a href="{{ plugin.getAuthUrl() }}" class="btn" target="_self">Authenticate with Instagram</a>
