Make it clear this is manual button

--- a/src/templates/_settings.twig
+++ b/src/templates/_settings.twig
@@ -112,7 +112,7 @@
 
       <br>
 
-      <a href="/actions/instagram-api/admin/refresh-access-token" class="btn">Refresh Access Token</a>
+      <a href="/actions/instagram-api/admin/refresh-access-token" class="btn">Manually Refresh Access Token</a>
 
       <a href="/actions/instagram-api/admin/clear-access-token" class="btn submit">Clear Access Token</a>
 
